--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ body{
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     vertical-align:baseline;
-    background-image: url('../images/rain.jpg');
+    background-image: url('../images/sun.jpg');
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
