--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ text-align: center;
     position: absolute;
     color:black;
     top: 35%;
-    right: 2vw;    
+    right: 1.5vw;
+    font-size: 1rem;    
 }
 /*main top bot*/
 .main-top-bot{
@@ -216,7 +217,7 @@ color: #1b4e3f;
 /* Media Query*/
 @media screen and (max-width: 799px){
     .header-search input{
-        padding: 1rem 4vw;
+        padding: 2.5vw 4vw;
     }
     .header-search .icon-search{
         right: 4vw;    
