--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
     font-family: 'Raleway', sans-serif;
     vertical-align:baseline;
     background-image: url('../images/sun.jpg');
+    background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
