--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
+    height: 100vh;
 }
 /* main */
 .w-main{
